--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>base</title>
+		<title>{%block head_title%}Muypicky.com{%endblock%}</title>
+		{%include 'snippets/css.html'%}
 	</head>
 	<body>
-	{% if html_var %}
-		<h1>dwwwewedwwwe {{num}}</h1>
-		<p>efedddddddd {{html_var}} dddweeeeeee</p>
-	{%endif%}
-	<p>
-	{%for some_item in some_list%}
-		{%if some_item|divisibleby:"2" %}
-		Even number
-		{%endif%}
-	{{some_item}}<br>
-	{%endfor%}
-	</p>
+		{%include 'snippets/nav.html'%}
+		
+		<div class='container'>
+			{%block content%}
+			{%endblock content%}
+		</div>
+
+		{%include 'snippets/js.html'%}	
 	</body>
 </html>
