--- a/restaurants/templates/restaurants/restaurantlocation_list.html
+++ b/restaurants/templates/restaurants/restaurantlocation_list.html
@@ -11,7 +11,7 @@
 <ul>
 {% for obj in object_list %}
 <li>
-    {{obj.name}} -  {{obj.location}}  - {{obj.category}} -  {{obj.timestamp}} - {{obj.updated}}
+    {{obj.name}} -  {{obj.location}}  - {{obj.category}} - <a href="/restaurants/{{obj.slug}}">{{obj.timestamp}} - {{obj.updated}}</a> 
 </li>
 {% endfor %}
 </ul>
